<resources>
    <string name="app_name">Personas BD</string>
    <string name="openDatabasePersonas">Mostrar personas</string>
    <string name="openDatabaseHoteles">Mostrar hoteles</string>
    <string name="añadirPersona">Añadir persona</string>
    <string name="telefono">Telefono</string>
    <string name="helper_text_telefono">+34698724049</string>
    <string name="email">Email</string>
    <string name="helper_text_email">name@domain.com</string>
    <string name="nombre">Nombre</string>
    <string name="helper_text_nombre">Javier</string>
    <string name="fnacimiento">Fecha nacimiento</string>
    <string name="helper_text_fnacimiento">16/10/1999</string>
    <string name="limpiarCampos">Limpiar campos</string>
    <string name="error_añadir_persona">Error al añadir persona</string>
    <string name="rellena_campos">Rellena todos los campos</string>
    <string name="email_incorrecto">Email incorrecto</string>
    <string name="nombre_incorrecto">Nombre no valido</string>
    <string name="telefono_incorrecto">Telefono no valido</string>
    <string name="fecha_incorrecta">Fecha no valida</string>
    <string name="persona_añadida">Persona añadida</string>
    <string name="deletePersona">Eliminar Persona</string>
    <string name="updatePersona">Actualizar persona</string>
    <string name="persona_borrada">Persona eliminada</string>
    <string name="accion_fallida">Accion fallida</string>
    <string name="actualizarPersona">Actualizar Persona</string>
    <string name="persona_actualizada">Persona actualizada</string>
    <string name="date_picker_title">Elije una fecha</string>
    <string name="seleccioanr_fecha">Seleccionar fecha</string>
    <string name="snackbar_undo">Deshacer</string>
    <string name="undo_delete_persona">Persona recuperada</string>
    <string name="persona_eliminada">Persona eliminada</string>
    <string name="error_eliminar_persona">Error al eliminar la persona</string>
    <string name="persona_editada">Persona editada</string>
    <string name="acerca_de">Acerca de</string>
    <string name="dialog_acerca_de_title">Acerca de</string>
    <string name="dialog_acerca_de_content">"Aplicacion desarollada por Jorge Martín Llorente para el modulo Programacion Multimedia y Dispositivos Moviles impartido por el profesor Oscar Novillo Camacho"</string>
    <string name="dialog_dismiss">Cancelar</string>
    <string name="github">Mi perfil de GitHub</string>
    <string name="añadirHotel">Añadir hotel</string>
    <string name="skyline">Ciudad</string>
    <string name="CIF">CIF</string>
    <string name="helper_text_CIF">B12345678</string>
    <string name="helper_text_nombre_hotel">Hotel Palas</string>
    <string name="estrellas">Estrellas</string>
    <string name="helper_text_estrellas">1–5</string>
    <string name="hotel_añadido">Hotel añadido</string>
    <string name="cif_incorrecto">CIF no valido</string>
    <string name="estrellas_incorrecta">1–5</string>
    <string name="hotel_borrado">Hotel Eliminado</string>
    <string name="undo_delete_hotel">Hotel recuperado</string>
    <string name="cif">CIF</string>
    <string name="deleteHotel">Eliminar Hotel</string>
    <string name="updateHotel">Actualizar Hotel</string>
    <string name="hotel_actualizado">Hotel actualizado</string>
    <string name="actualizarHotel">Actualizar Hotel</string>
    <string name="añadirVisita">Añadir Visita</string>
    <string name="openDatabaseVisitas">Mostrar Visitas</string>
    <string name="visita_añadida">Visita añadida</string>
    <string name="valoracion">Valoracion</string>
    <string name="helper_text_valoracion">Comenta tu experiencia</string>
    <string name="añadirValoracion">Añadir Valoracion</string>
    <string name="error_añadir_visita">Error al añadir visita</string>
    <string name="visita_eliminada">Visita eliminada</string>
    <string name="error_eliminar_visita">Error al eliminar visita</string>
    <string name="error_cargar_listas">Error al cargar emails y cifs</string>
    <string name="delete_visita">Eliminar Visita</string>
    <string name="update_visita">Actualizar Visita</string>
    <string name="filtrar_email">Filtrar por email</string>
    <string name="filtrar_cif">Filtrar por CIF</string>
    <string name="filtrar">Filtrar</string>
    <string name="undo_delete_visita">Visita Recuperada</string>
    <string name="editar_visita">Editar Visita</string>
    <string name="visita_actualizada">Visita Actualizada</string>
    <string name="openDatabaseTarjetas">Mostrar Tarjetas</string>
    <string name="tarjeta_borrada">Tarjeta Eliminada</string>
    <string name="undo_delete_tarjeta">Tarjeta Recuperada</string>
    <string name="numero">Numero</string>
    <string name="add_tarjeta">Añadir tarjeta</string>
    <string name="tarjeta_añadida">Tarjeta Añadida</string>
    <string name="error_numero_tarjeta">Numero No valido</string>
    <string name="error_fecha_caducidad_tarjeta">Caducidad No valida</string>
    <string name="error_cvv_tarjeta">CVV No Valido</string>
    <string name="error_nombre_titular_tarjeta">Nombre No Valido</string>
    <string name="error_fecha_caducidad_pasada">Tarjeta Caducada</string>
    <string name="error_añadir_tarjeta">Error al Añadir Tarjeta</string>
    <string name="tarjeta_eliminada">Tarjeta Eliminada</string>
    <string name="error_eliminar_tarjeta">Error al Eliminar Tarjeta</string>
    <string name="titular">Titular</string>
    <string name="numero_tarjeta">Numero Tarjeta</string>
    <string name="helper_text_numero_tarjeta">4548812049400004</string>
    <string name="helper_text_caducidad">16/10/2023</string>
    <string name="añadirTarjeta">Añadir Tarjeta</string>
    <string name="hint_caducidad">Caducidad</string>
    <string name="cvv_tarjeta">CVV</string>
    <string name="helper_text_cvv_tarjeta">666</string>
</resources>