<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add_tarjeta.AddTarjetaActivity">

    <ImageView
        android:id="@+id/imageViewTarjetas"
        android:layout_width="242dp"
        android:layout_height="87dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTopImagePersonas"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDerecha"
        app:layout_constraintStart_toStartOf="@+id/guidelineIzquierda"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldTitular"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titular"
        app:errorEnabled="true"
        app:helperText="@string/helper_text_nombre"
        app:helperTextEnabled="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/textFieldNumero"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDerecha"
        app:layout_constraintStart_toStartOf="@+id/guidelineIzquierda"
        app:layout_constraintTop_toBottomOf="@+id/guidelineTopImagePersonas"
        app:startIconDrawable="@drawable/person_solid">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textColorHint="#5C6BC0"
            android:visibility="visible" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldNumero"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/numero_tarjeta"
        app:errorEnabled="true"
        app:helperText="@string/helper_text_numero_tarjeta"
        app:helperTextEnabled="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/textFieldCVV"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDerecha"
        app:layout_constraintStart_toStartOf="@+id/guidelineIzquierda"
        app:layout_constraintTop_toBottomOf="@+id/textFieldTitular"
        app:startIconDrawable="@drawable/credit_card_solid">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"
            android:textColorHint="#5C6BC0" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldCVV"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cvv_tarjeta"
        app:errorEnabled="true"
        app:helperText="@string/helper_text_cvv_tarjeta"
        app:helperTextEnabled="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/textFieldCaducidad"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDerecha"
        app:layout_constraintStart_toStartOf="@+id/guidelineIzquierda"
        app:layout_constraintTop_toBottomOf="@+id/textFieldNumero"
        app:startIconDrawable="@drawable/credit_card_solid">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"
            android:textColorHint="#5C6BC0" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldCaducidad"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_caducidad"
        app:errorEnabled="true"
        app:helperText="@string/helper_text_caducidad"
        app:helperTextEnabled="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/containedButtonSelectDate"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDerecha"
        app:layout_constraintStart_toStartOf="@+id/guidelineIzquierda"
        app:layout_constraintTop_toBottomOf="@+id/textFieldCVV"
        app:startIconDrawable="@drawable/calendar_solid">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:maxLines="1"
            android:textColorHint="#7E57C2" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/containedButtonSelectDate"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleccioanr_fecha"
        app:icon="@drawable/calendar_solid"
        app:layout_constraintBottom_toTopOf="@id/guidelineBottomImagePersonas"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDerecha"
        app:layout_constraintStart_toStartOf="@+id/guidelineIzquierda"
        app:layout_constraintTop_toBottomOf="@+id/textFieldCaducidad" />

    <Button
        android:id="@+id/containedButtonAddTarjeta"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/añadirTarjeta"
        app:icon="@drawable/credit_card_solid"
        app:layout_constraintBottom_toTopOf="@+id/containedButtonClean"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDerecha"
        app:layout_constraintStart_toStartOf="@+id/guidelineIzquierda"
        app:layout_constraintTop_toTopOf="@+id/guidelineBottomImagePersonas" />

    <Button
        android:id="@+id/containedButtonClean"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/limpiarCampos"
        app:icon="@drawable/circle_xmark_regular"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTopImageHoteles"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDerecha"
        app:layout_constraintStart_toStartOf="@+id/guidelineIzquierda"
        app:layout_constraintTop_toBottomOf="@+id/containedButtonAddTarjeta" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineIzquierda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.11" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineDerecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTopImagePersonas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottomImagePersonas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.71" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTopImageHoteles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.89" />


</androidx.constraintlayout.widget.ConstraintLayout>