<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="242dp"
        android:layout_height="87dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTopFields"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDerecha"
        app:layout_constraintStart_toStartOf="@+id/guidelineIzquierda"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:errorEnabled="true"
        app:helperText="@string/helper_text_email"
        app:helperTextEnabled="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/textFieldNombre"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDerecha"
        app:layout_constraintStart_toStartOf="@+id/guidelineIzquierda"
        app:layout_constraintTop_toBottomOf="@+id/guidelineTopFields"
        app:startIconDrawable="@drawable/envelope_open_regular">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textColorHint="#5C6BC0" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldNombre"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        app:errorEnabled="true"
        app:helperText="@string/helper_text_nombre"
        app:helperTextEnabled="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/textFieldTelefono"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDerecha"
        app:layout_constraintStart_toStartOf="@+id/guidelineIzquierda"
        app:layout_constraintTop_toBottomOf="@+id/textFieldEmail"
        app:startIconDrawable="@drawable/person_solid">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textColorHint="#5C6BC0"
            android:visibility="visible" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldTelefono"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefono"
        app:errorEnabled="true"
        app:helperText="@string/helper_text_telefono"
        app:helperTextEnabled="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/textFieldFNacimiento"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDerecha"
        app:layout_constraintStart_toStartOf="@+id/guidelineIzquierda"
        app:layout_constraintTop_toBottomOf="@+id/textFieldNombre"
        app:startIconDrawable="@drawable/phone_solid">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLines="1"
            android:textColorHint="#5C6BC0" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldFNacimiento"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fnacimiento"
        app:errorEnabled="true"
        app:helperText="@string/helper_text_fnacimiento"
        app:helperTextEnabled="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/containedButtonSelectDate"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDerecha"
        app:layout_constraintStart_toStartOf="@+id/guidelineIzquierda"
        app:layout_constraintTop_toBottomOf="@+id/textFieldTelefono"
        app:startIconDrawable="@drawable/cake_candles_solid">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:maxLines="1"
            android:textColorHint="#7E57C2" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/containedButtonSelectDate"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleccioanr_fecha"
        app:icon="@drawable/calendar_solid"
        app:layout_constraintBottom_toTopOf="@id/guidelineBottomFields"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDerecha"
        app:layout_constraintStart_toStartOf="@+id/guidelineIzquierda"
        app:layout_constraintTop_toBottomOf="@+id/textFieldFNacimiento" />

    <Button
        android:id="@+id/containedButtonAddPerson"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/añadirPersona"
        app:icon="@drawable/user_plus_solid"
        app:layout_constraintBottom_toTopOf="@+id/containedButtonClean"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDerecha"
        app:layout_constraintStart_toStartOf="@+id/guidelineIzquierda"
        app:layout_constraintTop_toTopOf="@+id/guidelineBottomFields" />

    <Button
        android:id="@+id/containedButtonClean"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/limpiarCampos"
        app:icon="@drawable/circle_xmark_regular"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTopNavigation"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDerecha"
        app:layout_constraintStart_toStartOf="@+id/guidelineIzquierda"
        app:layout_constraintTop_toBottomOf="@+id/containedButtonAddPerson" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineIzquierda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.11" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineDerecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTopFields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottomFields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.71" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTopNavigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8569254" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottomNavigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95281583" />

</androidx.constraintlayout.widget.ConstraintLayout>