<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add_hotel.AddHotelActivity">

    <ImageView
        android:id="@+id/imageViewPersonas"
        android:layout_width="242dp"
        android:layout_height="87dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTopImagePersonas"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDerecha"
        app:layout_constraintStart_toStartOf="@+id/guidelineIzquierda"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldCIF"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/CIF"
        app:errorEnabled="true"
        app:helperText="@string/helper_text_CIF"
        app:helperTextEnabled="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/textFieldNombre"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDerecha"
        app:layout_constraintStart_toStartOf="@+id/guidelineIzquierda"
        app:layout_constraintTop_toBottomOf="@+id/guidelineTopImagePersonas"
        app:startIconDrawable="@drawable/briefcase_solid">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textColorHint="#5C6BC0" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldNombre"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        app:errorEnabled="true"
        app:helperText="@string/helper_text_nombre_hotel"
        app:helperTextEnabled="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/textFieldTelefono"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDerecha"
        app:layout_constraintStart_toStartOf="@+id/guidelineIzquierda"
        app:layout_constraintTop_toBottomOf="@+id/textFieldCIF"
        app:startIconDrawable="@drawable/hotel_solid">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textColorHint="#5C6BC0"
            android:visibility="visible" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldTelefono"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefono"
        app:errorEnabled="true"
        app:helperText="@string/helper_text_telefono"
        app:helperTextEnabled="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/textFieldEstrellas"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDerecha"
        app:layout_constraintStart_toStartOf="@+id/guidelineIzquierda"
        app:layout_constraintTop_toBottomOf="@+id/textFieldNombre"
        app:startIconDrawable="@drawable/phone_solid">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLines="1"
            android:textColorHint="#5C6BC0" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldEstrellas"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/estrellas"
        app:errorEnabled="true"
        app:helperText="@string/helper_text_estrellas"
        app:helperTextEnabled="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottomImagePersonas"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDerecha"
        app:layout_constraintStart_toStartOf="@+id/guidelineIzquierda"
        app:layout_constraintTop_toBottomOf="@+id/textFieldTelefono"
        app:startIconDrawable="@drawable/star_solid">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"
            android:textColorHint="#7E57C2" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/containedButtonAddPerson"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/añadirHotel"
        app:icon="@drawable/hotel_solid"
        app:layout_constraintBottom_toTopOf="@+id/containedButtonClean"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDerecha"
        app:layout_constraintStart_toStartOf="@+id/guidelineIzquierda"
        app:layout_constraintTop_toTopOf="@+id/guidelineBottomImagePersonas" />

    <Button
        android:id="@+id/containedButtonClean"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/limpiarCampos"
        app:icon="@drawable/circle_xmark_regular"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTopImageHoteles"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDerecha"
        app:layout_constraintStart_toStartOf="@+id/guidelineIzquierda"
        app:layout_constraintTop_toBottomOf="@+id/containedButtonAddPerson" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineIzquierda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.11" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineDerecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTopImagePersonas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.13" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottomImagePersonas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.64" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTopImageHoteles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.83" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottomImageHoteles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95281583" />

</androidx.constraintlayout.widget.ConstraintLayout>